                    Released XXX 2013

    Significant User Visible Changes and New Features

    o   
    
    Bugfixes
    
    o   mixed() correctly converts all non-formula arguments to 
        formula correctly to a formula (gave error if formula
        was a different object and not-available on cluster nodes).
        Prints message if formula is converted to a formula.


                    ************************
                    ** afex VERSION 0.6-x **
                    ************************
                    
                    Changes in afex Version 0.6-x
                    Released September 2013

    Significant User Visible Changes and New Features

    o   added LRT tests to mixed() which should replicate
        the recommended test by Barr et al. (2013, JML).
        
    o   multicore estimation of (g)lmer models now available
        through package parallel (argument cl) for mixed().
        
    o   added experimental "lme4" return method for 
        aov.car and ez.glm (which fits the data using lmer).
        
    o   reshape2 and stringr are not any more loaded when
        loading afex (are now only imported via Imports)
    
    Bugfixes
    
    o   Type 2 tests of mixed() were implemented incorrectly (i.e.,
        they did not give what they should have given according
        to the description in the help file).
        
    o   aov.car() and ez.glm() now convert factor levels of within 
        subjects factors to be of length one so that long levels 
        do not lead to problems when constructing the call to lm. 
        Thanks to Isaac Schwabacher for noticing this, see also:
        https://bugs.r-project.org/bugzilla3/show_bug.cgi?id=15377
    
    o   mixed should now work with missing values as it construes
        a new data object if the model.matrix from which the
        different versions are fitted has nrow different to 
        nrow(data) (with warning). Thanks to Daniel Bunker